feat: Add CSV import/export for inventory management
- CSV import parses headers, handles quoted values, skips comments
- CSV export for editing in Excel/Google Sheets
- Clear inventory option for fresh imports
- Settings page reorganized with CSV as primary option
- Starter inventory CSV with ~150 common RV items

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,5 +7,4 @@ binding = "CAMPER_DB"
 database_name = "camper-pack"
 database_id = "ccdf078f-3766-4eeb-ad1f-d8986c2a4c7a"
 
-[vars]
-ANTHROPIC_API_KEY = ""  # Will be set as secret for production
+# Environment variables are set in Cloudflare Dashboard as secrets
