feat: Add per-traveler items and sort by traveler view
- Personal category items (clothing, toiletries, meds, other) now expand
  into separate entries per traveler in packing lists
- Added "Traveler" option to View by dropdown showing Neil's Items,
  Kim's Items, and Shared Items sections
- Added "Fix Personal Items for Travelers" button in Settings to batch
  update existing items with traveler quantities
- Added _headers file for cache control on Cloudflare Pages

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241127.0",
+    "@playwright/test": "^1.57.0",
+    "playwright": "^1.57.0",
     "typescript": "^5.3.3",
     "wrangler": "^3.91.0"
   },
